<resources>
    <string name="app_name">SATECO Banche</string>

    <string name="action_contruction">Scan contructions</string>
    <string name="action_information">Informations</string>
    <string name="action_settings">Settings</string>

    <string name="action_add_contruction">Add new contruction</string>
    <string name="action_add_banche">Add new banche</string>

    <string name="heightlabel">Hauteur</string>
    <string name="heightvalue">0</string>
    <string name="heightunit">cm</string>

    <string name="thicknesslabel">Epaisseur</string>
    <string name="thicknessvalue">0</string>
    <string name="thicknessunit">cm</string>

    <string name="niveaulabel">Niveau</string>
    <string name="niveauvalue">0</string>
    <string name="niveauunit">°</string>

    <string name="aplomblabel">Aplomb</string>
    <string name="aplombvalue">0</string>
    <string name="aplombunit">°</string>

    <string name="pressurelabel">Pression</string>
    <string name="pressurevalue">0</string>
    <string name="pressureunit">T</string>

    <string name="tabdistance">Capteur de distance</string>
    <string name="tabangle">Inclinomètre</string>
    <string name="tabpressure">Capteur de pression</string>

    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_desciption">android.studio@android.com</string>
    <string name="nav_img_desciption">Image description</string>
    <string name="splash_image_description">splash image</string>
</resources>
