<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_contruction"
        android:orderInCategory="100"
        android:title="@string/action_sync"
        android:icon="@drawable/ic_menu_scan"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_contruction"
        android:orderInCategory="100"
        android:title="@string/action_add_contruction"
        android:icon="@drawable/ic_menu_plus_circle"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_banche"
        android:orderInCategory="100"
        android:title="@string/action_add_banche"
        android:icon="@drawable/ic_menu_plus_circle"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_information"
        android:orderInCategory="100"
        android:title="@string/action_information"
        android:icon="@drawable/ic_menu_information"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_menu_manage"
        app:showAsAction="never" />
</menu>
