<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dfm.honglv.satecobanche.main.MainActivity">
    <item
        android:id="@+id/action_contruction"
        android:orderInCategory="100"
        android:title="@string/action_contruction"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_information"
        android:orderInCategory="100"
        android:title="@string/action_information"
        android:icon="@android:drawable/ic_menu_info_details"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:icon="@android:drawable/ic_menu_preferences"
        app:showAsAction="never" />
</menu>
