<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_pressure_line_chart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.dfm.honglv.satecobanche.PressureLineChartActivity">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chartPressure"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/seekBar1"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true" />

    <TextView
        android:id="@+id/pressurelabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/pressurelabel"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="10dp"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingBottom="15dp" />

    <TextView
        android:id="@+id/pressureunit"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/pressureunit"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="10dp"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:paddingBottom="15dp" />

    <EditText
        android:id="@+id/pressurevalue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:enabled="false"
        android:text="@string/pressurevalue"
        android:textAlignment="center"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="10dp"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_toLeftOf="@+id/pressureunit"
        android:layout_toRightOf="@+id/pressurelabel"
        android:layout_alignParentBottom="true" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar1"
        android:layout_above="@+id/seekBar2" />

    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekBar2"
        android:layout_above="@+id/pressurelabel" />

</RelativeLayout>
